--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
-  - name: 💡 Feature Request
-    url: https://github.com/HPDCollaborative/builder-api/discussions/categories/feature-requests
-    about: Please suggest new features in our Feature Request Discussion board
+  - name: Feature Request
+    url: https://github.com/HPDCollaborative/builder-api/discussions/new?category=feature-requests
+    about: Suggest a feature for the Builder API
